refactor(team): use ConcurrentHashMap and fix event-driven state mutations