@@ -2,53 +2,56 @@ package net.theevilreaper.xerus.api.team;
 
 import net.kyori.adventure.key.Key;
 import net.minestom.server.entity.Player;
-import org.jetbrains.annotations.*;
+import org.jetbrains.annotations.Contract;
+import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.UnmodifiableView;
 
-import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.concurrent.ConcurrentHashMap;
 
 /**
  * The default implementation of the {@link TeamService} interface.
  *
  * @author theEvilReaper
- * @version 1.1.0
+ * @version 1.2.0
  * @since 1.0.1
  */
 public final class StandardTeamService implements TeamService {
 
-    private final List<Team> teams;
+    private final Map<Key, Team> teams;
 
     /**
      * Creates a new instance from the {@link StandardTeamService}.
      */
     StandardTeamService() {
-        this.teams = new ArrayList<>();
+        this.teams = new ConcurrentHashMap<>();
     }
 
     /**
      * {@inheritDoc}
      */
     @Override
-    public void add(@NotNull Team team) {
-        this.teams.add(team);
+    public void add(Team team) {
+        this.teams.put(team.key(), team);
     }
 
     /**
      * {@inheritDoc}
      */
     @Override
-    public void remove(@NotNull Team team) {
-        this.teams.remove(team);
+    public void remove(Team team) {
+        this.teams.remove(team.key());
     }
 
     /**
      * {@inheritDoc}
      */
     @Override
-    public void remove(@NotNull Key identifier) {
-        this.teams.removeIf(team -> team.key().equals(identifier));
+    public void remove(Key identifier) {
+        this.teams.remove(identifier);
     }
 
     /**
@@ -58,8 +61,8 @@ public final class StandardTeamService implements TeamService {
     public void clear() {
         if (this.teams.isEmpty()) return;
 
-        for (int i = 0; i < this.teams.size(); i++) {
-            this.teams.get(i).clearPlayers();
+        for (Team team : this.teams.values()) {
+            team.clearPlayers();
         }
 
         this.teams.clear();
@@ -69,65 +72,27 @@ public final class StandardTeamService implements TeamService {
      * {@inheritDoc}
      */
     @Override
-    public @NotNull Optional<@Nullable Team> getTeam(@NotNull Key identifier) {
-        int i = 0;
-
-        while (i < teams.size() && !teams.get(i).key().equals(identifier)) {
-            i++;
-        }
-
-        return Optional.ofNullable(teams.get(i));
+    public Optional<@Nullable Team> getTeam(Key identifier) {
+        return Optional.ofNullable(this.teams.get(identifier));
     }
 
     /**
      * {@inheritDoc}
      */
     @Override
-    public boolean exists(@NotNull Key identifier) {
-        if (teams.isEmpty()) {
-            return false;
-        }
-
-        int i = 0;
-
-        while (i < teams.size() && !teams.get(i).key().equals(identifier)) {
-            i++;
-        }
-
-        return i != teams.size();
+    public boolean exists(Key identifier) {
+        return this.teams.containsKey(identifier);
     }
 
     /**
      * {@inheritDoc}
      */
     @Override
-    public @NotNull Optional<@Nullable Team> getTeam(@NotNull Player player) {
-        Team team = null;
-
-        for (int i = 0; i < getTeams().size() && team == null; i++) {
-            if (getTeams().get(i).hasPlayer(player)) {
-                team = getTeams().get(i);
+    public Optional<@Nullable Team> getTeam(Player player) {
+        for (Team team : this.teams.values()) {
+            if (team.hasPlayer(player)) {
+                return Optional.of(team);
             }
-        }
-
-        return Optional.ofNullable(team);
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public Optional<@Nullable Team> getSmallestTeam() {
-        if (!teams.isEmpty()) {
-            int i = 1;
-            var team = teams.getFirst();
-
-            while (i < teams.size() && teams.get(i).getCurrentSize() < team.getCurrentSize()) {
-                team = teams.get(i);
-                i++;
-            }
-
-            return Optional.ofNullable(team);
         }
 
         return Optional.empty();
@@ -136,9 +101,17 @@ public final class StandardTeamService implements TeamService {
     /**
      * {@inheritDoc}
      */
+    @Override
+    public Optional<@Nullable Team> getSmallestTeam() {
+        return this.teams.values().stream().min(Comparator.comparingInt(Team::getCurrentSize));
+    }
+
+    /**
+     * {@inheritDoc}
+     */
     @Contract(pure = true)
     @Override
-    public @NotNull @UnmodifiableView List<Team> getTeams() {
-        return Collections.unmodifiableList(teams);
+    public @UnmodifiableView List<Team> getTeams() {
+        return List.copyOf(this.teams.values());
     }
 }
